# bobcfcplatform

./: .gitignore
.zread/wiki/: current
.zread/wiki/versions/2026-04-16-114202/: 10-shu-ju-ku-mo-xing-she-ji.md  11-shu-ju-qian-yi-yu-chu-shi-hua.md  12-huan-cun-fu-wu-she-ji.md  13-liao-tian-fu-wu-shi-xian.md  14-zhi-pin-sheng-cheng-fu-wu.md  15-dui-xiang-cun-chu-fu-wu.md  16-xiao-xi-dui-lie-ji-cheng.md  19-jwt-hui-hua-guan-li.md  (+16 more)
backend/: .env  .env.example  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: agents.py  artifacts.py  auth.py  chat.py  chat_ws.py  conversations.py  skills.py  users.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  agent.py  artifact.py  base.py  conversation.py  message.py  oauth_session.py  skill.py  user.py
backend/app/mq/: artifact_consumer.py  chat_consumer.py  producer.py
backend/app/schemas/: __init__.py  user.py
backend/app/services/: artifact_service.py  auth_service.py  cache_service.py  chat_service.py  claim_mapper.py  minio_service.py  oidc_service.py
backend/app/websocket/: manager.py
backend/scripts/: run_workers.py
frontend/: CLAUDE.md  README.md  metadata.json  package-lock.json  package.json  server.ts  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  types.ts
frontend/src/components/: Admin.tsx  Artifacts.tsx  Chat.tsx  Login.tsx  Sidebar.tsx  SkillRepositoryModal.tsx
frontend/src/lib/: api.ts
